// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContentPickerSelect content types should render answer  1`] = `
<Fragment>
  <ContentPickerSelect__ContentSelectButton
    answerTypes={
      Array [
        "Number",
        "Currency",
      ]
    }
    data={
      Object {
        "questionnaire": Object {
          "id": "1",
          "metadata": Array [],
          "sections": Array [],
        },
      }
    }
    data-test="content-picker-select"
    match={
      Object {
        "params": Object {
          "questionnaireId": "1",
        },
      }
    }
    onClick={[Function]}
    onSubmit={[MockFunction]}
    type="button"
    variant="primary"
  >
    <ContentPickerSelect__ContentSelected>
      foobar
    </ContentPickerSelect__ContentSelected>
  </ContentPickerSelect__ContentSelectButton>
  <ContentPickerModal
    contentTypes={
      Array [
        "Custom",
      ]
    }
    isOpen={false}
    onClose={[Function]}
    onSubmit={[Function]}
  />
</Fragment>
`;

exports[`ContentPickerSelect content types should render answer and metadata 1`] = `
<Fragment>
  <ContentPickerSelect__ContentSelectButton
    answerTypes={
      Array [
        "Number",
        "Currency",
      ]
    }
    data={
      Object {
        "questionnaire": Object {
          "id": "1",
          "metadata": Array [],
          "sections": Array [],
        },
      }
    }
    data-test="content-picker-select"
    match={
      Object {
        "params": Object {
          "questionnaireId": "1",
        },
      }
    }
    onClick={[Function]}
    onSubmit={[MockFunction]}
    type="button"
    variant="primary"
  >
    <ContentPickerSelect__ContentSelected>
      foobar
    </ContentPickerSelect__ContentSelected>
  </ContentPickerSelect__ContentSelectButton>
  <ContentPickerModal
    contentTypes={
      Array [
        "Custom",
        "Metadata",
      ]
    }
    isOpen={false}
    onClose={[Function]}
    onSubmit={[Function]}
  />
</Fragment>
`;

exports[`ContentPickerSelect content types should render destination 1`] = `
<Fragment>
  <ContentPickerSelect__ContentSelectButton
    answerTypes={
      Array [
        "Number",
        "Currency",
      ]
    }
    data={
      Object {
        "questionnaire": Object {
          "id": "1",
          "metadata": Array [],
          "sections": Array [],
        },
      }
    }
    data-test="content-picker-select"
    match={
      Object {
        "params": Object {
          "questionnaireId": "1",
        },
      }
    }
    onClick={[Function]}
    onSubmit={[MockFunction]}
    type="button"
    variant="primary"
  >
    <ContentPickerSelect__ContentSelected>
      foobar
    </ContentPickerSelect__ContentSelected>
  </ContentPickerSelect__ContentSelectButton>
  <ContentPickerModal
    contentTypes={
      Array [
        "Destination",
      ]
    }
    isOpen={false}
    onClose={[Function]}
    onSubmit={[Function]}
  />
</Fragment>
`;

exports[`ContentPickerSelect content types should render metadata 1`] = `
<Fragment>
  <ContentPickerSelect__ContentSelectButton
    answerTypes={
      Array [
        "Number",
        "Currency",
      ]
    }
    data={
      Object {
        "questionnaire": Object {
          "id": "1",
          "metadata": Array [],
          "sections": Array [],
        },
      }
    }
    data-test="content-picker-select"
    match={
      Object {
        "params": Object {
          "questionnaireId": "1",
        },
      }
    }
    onClick={[Function]}
    onSubmit={[MockFunction]}
    type="button"
    variant="primary"
  >
    <ContentPickerSelect__ContentSelected>
      foobar
    </ContentPickerSelect__ContentSelected>
  </ContentPickerSelect__ContentSelectButton>
  <ContentPickerModal
    contentTypes={
      Array [
        "Metadata",
      ]
    }
    isOpen={false}
    onClose={[Function]}
    onSubmit={[Function]}
  />
</Fragment>
`;

exports[`ContentPickerSelect content types should render question 1`] = `
<Fragment>
  <ContentPickerSelect__ContentSelectButton
    answerTypes={
      Array [
        "Number",
        "Currency",
      ]
    }
    data={
      Object {
        "questionnaire": Object {
          "id": "1",
          "metadata": Array [],
          "sections": Array [],
        },
      }
    }
    data-test="content-picker-select"
    match={
      Object {
        "params": Object {
          "questionnaireId": "1",
        },
      }
    }
    onClick={[Function]}
    onSubmit={[MockFunction]}
    type="button"
    variant="primary"
  >
    <ContentPickerSelect__ContentSelected>
      foobar
    </ContentPickerSelect__ContentSelected>
  </ContentPickerSelect__ContentSelectButton>
  <ContentPickerModal
    contentTypes={
      Array [
        "Question",
      ]
    }
    isOpen={false}
    onClose={[Function]}
    onSubmit={[Function]}
  />
</Fragment>
`;

exports[`ContentPickerSelect metadata types should correctly filter by type 1`] = `
Object {
  "answerData": undefined,
  "contentTypes": Array [
    "Metadata",
  ],
  "isOpen": false,
  "metadataData": undefined,
  "onClose": [Function],
  "onSubmit": [Function],
  "selectedId": undefined,
  "selectedObj": undefined,
}
`;

exports[`ContentPickerSelect metadata types should correctly filter empty metadata 1`] = `
Object {
  "answerData": undefined,
  "contentTypes": Array [
    "Metadata",
  ],
  "isOpen": false,
  "metadataData": undefined,
  "onClose": [Function],
  "onSubmit": [Function],
  "selectedId": undefined,
  "selectedObj": undefined,
}
`;

exports[`ContentPickerSelect metadata types should correctly show all types when none specified 1`] = `
Object {
  "answerData": undefined,
  "contentTypes": Array [
    "Metadata",
  ],
  "isOpen": false,
  "metadataData": undefined,
  "onClose": [Function],
  "onSubmit": [Function],
  "selectedId": undefined,
  "selectedObj": undefined,
}
`;

exports[`ContentPickerSelect should disable select button correctly 1`] = `
<Fragment>
  <ContentPickerSelect__ContentSelectButton
    answerTypes={
      Array [
        "Number",
        "Currency",
      ]
    }
    data={
      Object {
        "questionnaire": Object {
          "id": "1",
          "metadata": Array [],
          "sections": Array [],
        },
      }
    }
    data-test="content-picker-select"
    disabled={true}
    match={
      Object {
        "params": Object {
          "questionnaireId": "1",
        },
      }
    }
    onClick={[Function]}
    onSubmit={[MockFunction]}
    type="button"
    variant="primary"
  >
    <ContentPickerSelect__ContentSelected>
      foobar
    </ContentPickerSelect__ContentSelected>
  </ContentPickerSelect__ContentSelectButton>
  <ContentPickerModal
    contentTypes={
      Array [
        "Custom",
      ]
    }
    isOpen={false}
    onClose={[Function]}
    onSubmit={[Function]}
  />
</Fragment>
`;

exports[`ContentPickerSelect should disable select button correctly 2`] = `
<Fragment>
  <ContentPickerSelect__ContentSelectButton
    answerTypes={
      Array [
        "Number",
        "Currency",
      ]
    }
    data={
      Object {
        "questionnaire": Object {
          "id": "1",
          "metadata": Array [],
          "sections": Array [],
        },
      }
    }
    data-test="content-picker-select"
    disabled={true}
    match={
      Object {
        "params": Object {
          "questionnaireId": "1",
        },
      }
    }
    onClick={[Function]}
    onSubmit={[MockFunction]}
    type="button"
    variant="primary"
  >
    <ContentPickerSelect__ContentSelected>
      foobar
    </ContentPickerSelect__ContentSelected>
  </ContentPickerSelect__ContentSelectButton>
  <ContentPickerModal
    contentTypes={
      Array [
        "Custom",
      ]
    }
    isOpen={false}
    onClose={[Function]}
    onSubmit={[Function]}
  />
</Fragment>
`;

exports[`ContentPickerSelect should render 1`] = `
<Fragment>
  <ContentPickerSelect__ContentSelectButton
    answerTypes={
      Array [
        "Number",
        "Currency",
      ]
    }
    data={
      Object {
        "questionnaire": Object {
          "id": "1",
          "metadata": Array [],
          "sections": Array [],
        },
      }
    }
    data-test="content-picker-select"
    match={
      Object {
        "params": Object {
          "questionnaireId": "1",
        },
      }
    }
    onClick={[Function]}
    onSubmit={[MockFunction]}
    type="button"
    variant="primary"
  >
    <ContentPickerSelect__ContentSelected>
      foobar
    </ContentPickerSelect__ContentSelected>
  </ContentPickerSelect__ContentSelectButton>
  <ContentPickerModal
    contentTypes={
      Array [
        "Custom",
      ]
    }
    isOpen={false}
    onClose={[Function]}
    onSubmit={[Function]}
  />
</Fragment>
`;
